[gd_scene load_steps=13 format=3 uid="uid://cdmw0kbeupmo1"]

[ext_resource type="Texture2D" uid="uid://bjqtsvfeogrtm" path="res://intro_assets/scenes/lss.jpg" id="1_0hi1n"]
[ext_resource type="Script" uid="uid://fumdywrllkml" path="res://intro_assets/scenes/unrepaired_lss.gd" id="1_6ury0"]
[ext_resource type="Texture2D" uid="uid://di25fa6u7vkbq" path="res://intro_assets/scenes/box.png" id="2_t52gd"]
[ext_resource type="Script" uid="uid://dhivc5efwxrl8" path="res://intro_assets/scenes/boxforLss.gd" id="3_t52gd"]
[ext_resource type="Texture2D" uid="uid://32tv7x6dhd12" path="res://intro_assets/scenes/infobox.png" id="4_ojiy7"]
[ext_resource type="Script" uid="uid://bqlix3jebm06c" path="res://intro_assets/scenes/info_box.gd" id="5_bxim6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hi1n"]
size = Vector2(180, 138)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t52gd"]
size = Vector2(1256, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ojiy7"]
size = Vector2(181.5, 462)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bxim6"]
size = Vector2(59, 290)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ury0"]
size = Vector2(401.5, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyi4u"]
size = Vector2(209, 96)

[node name="UnrepairedLss" type="Node2D"]
script = ExtResource("1_6ury0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="lss" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_0hi1n")
expand_mode = 1

[node name="box" type="TextureRect" parent="CanvasLayer"]
offset_left = 483.0
offset_top = 362.0
offset_right = 695.0
offset_bottom = 566.0
mouse_filter = 2
texture = ExtResource("2_t52gd")
expand_mode = 1

[node name="Area2D" type="Area2D" parent="CanvasLayer"]
script = ExtResource("3_t52gd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(600, 477)
shape = SubResource("RectangleShape2D_0hi1n")

[node name="notbox" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(630, 108)
shape = SubResource("RectangleShape2D_t52gd")

[node name="notbox2" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(103, 433)
shape = SubResource("RectangleShape2D_ojiy7")

[node name="togallery" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(1256, 433)
shape = SubResource("RectangleShape2D_bxim6")

[node name="toCockpit" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(680, 682)
shape = SubResource("RectangleShape2D_6ury0")

[node name="notbox3" type="CollisionShape2D" parent="CanvasLayer/Area2D"]
position = Vector2(588.5, 326)
shape = SubResource("RectangleShape2D_uyi4u")

[node name="infoBox" type="TextureRect" parent="CanvasLayer/Area2D"]
offset_left = 196.0
offset_top = 57.0
offset_right = 523.0
offset_bottom = 403.0
mouse_filter = 2
texture = ExtResource("4_ojiy7")
expand_mode = 1
script = ExtResource("5_bxim6")

[node name="CanvasLayer2" type="CanvasLayer" parent="CanvasLayer/Area2D/infoBox"]

[node name="Control" type="Control" parent="CanvasLayer/Area2D/infoBox/CanvasLayer2"]
layout_mode = 3
anchor_left = 0.29200003
anchor_top = 0.31800002
anchor_right = 0.29200003
anchor_bottom = 0.31800002
offset_left = -126.76004
offset_top = -79.96001
offset_right = 109.23996
offset_bottom = 70.03999

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Area2D/infoBox/CanvasLayer2/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -59.0
offset_right = 93.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
